javassist online code generation added